# flask-production

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  conftest.py  dev.docker-compose.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  run.sh  setup.py
docker/: Dockerfile  entrypoint  start
docker/dev/: Dockerfile
docker/flask/: Dockerfile
docker/nginx/: Dockerfile  default_nginx.conf  nginx.conf
docker/postgres/: Dockerfile  init.sh
flaskapi/: __init__.py
flaskapi/blueprints/: base_model.py
flaskapi/blueprints/auth/: models.py
flaskapi/blueprints/user/: models.py
flaskapi/blueprints/v1/: __init__.py  base_model.py  base_repository.py  util.py  view_manager.py
flaskapi/core/: config.py  exceptions.py  extensions.py  logger.py
flaskapi/resources/: __init__.py
flaskapi/tests/: __init__.py  conftest.py  test_app.py  test_user_endpoints.py  test_utilities.py
flaskapi/v1/: __init__.py  base_model.py  base_repository.py  view_manager.py
flaskapp/: __init__.py  config.py  extensions.py
migrations/: env.py
migrations/versions/: 038ef5e89e9a__initial_migration.py  25b7136843d5_initial_usermodel.py  9aa0a5666383__2_user_security_model.py  a7bacd94ce57__1_unique_user_email.py  bef91846baf9_1_remove_deletedat_default.py  f5a435da6a53_0_initial_migration.py
requirements/: base.txt  dev.txt
tests/: test_utilities.py  utils.py
tests/factories/: user.py
tests/users/: conftest.py  test_create_users.py  test_deleting_users.py  test_fetching_users.py  test_updating_users.py
(+22 files in other folders)
